--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "standard": "^17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
