--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "standard": "^17.1.0"
+    "standard": "^17.1.0",
+    "uuid": "^9.0.0"
   },
   "eslintConfig": {
     "extends": "standard"
